mdapipkg/unpackaged/objects/Token__c.object
<CustomObject>
    <fields>
        <fullName>AccessToken__c</fullName>
        <label>AccessToken</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConsumerKey__c</fullName>
        <label>ConsumerKey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConsumerSecret__c</fullName>
        <label>ConsumerSecret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expires__c</fullName>
        <inlineHelpText>Timestamp for token expiration</inlineHelpText>
        <label>Expires</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RefreshToken__c</fullName>
        <label>RefreshToken</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TokenType__c</fullName>
        <label>TokenType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Token</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Token Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tokens</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>